// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with all props 1`] = `
<div
  className="Modal__backdrop__QS6bfkpU"
  onClick={[Function]}
  role="presentation"
>
  <div
    className="Modal__root__tJeP8o3x Modal__isRootSizeMedium__QLxPE891 Modal__isRootPositionCenter__ABff+Lfn"
    onClick={[Function]}
    role="presentation"
  >
    <div
      className="Modal__head__Q3WzGJOA"
    >
      <h3
        className="Modal__headTitle__OK9Koa3-"
      >
        workLog:modal.add.title
      </h3>
      <button
        className="Modal__close__Fe7Arlxu"
        onClick={[Function]}
        title="Close"
        type="button"
      >
        ×
      </button>
    </div>
    <div
      className="Modal__body__cWKOAQX3 Modal__isBodyScrollable__JOFadMa2"
    >
      <div
        className="ScrollView__root__MRBBylbM    ScrollView__isRootVertical__wMxlxuUu"
        style={
          Object {
            "--rui-local-arrow-color": "inherit",
            "--rui-local-end-shadow-background": "radial-gradient(farthest-side at center bottom, rgba(0, 0, 0, 0.16) 0%, rgba(0, 0, 0, 0.06) 40%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
            "--rui-local-end-shadow-box-shadow": "none",
            "--rui-local-shadow-height": "16px",
            "--rui-local-shadow-width": "auto",
            "--rui-local-start-shadow-background": "radial-gradient(farthest-side at center top, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.05) 60%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
            "--rui-local-start-shadow-box-shadow": "none",
          }
        }
      >
        <div
          className="ScrollView__viewport__mut+G3n9"
        >
          <div
            className="ScrollView__content__SzqfnVye"
          >
            <div
              className="Modal__content__n-8neoHu"
            >
              <form>
                <div
                  className="centeredLayout"
                >
                  <div
                    className="List__root__uu6HKocx"
                  >
                    <ul
                      className="List__list__D1lQxgaF
          List__alignStart__15aFZ2jH"
                    >
                      <li
                        className="List__item__TGs53d07"
                      >
                        <p
                          className="formInfoText"
                        >
                          workLog:modal.add.alreadySendForApprovalDescription
                        </p>
                      </li>
                      <li
                        className="List__item__TGs53d07"
                      >
                        <label
                          className="TextField__root__-CnhpfBr    TextField__rootLayoutVertical__da8tPfcc TextField__isRootDisabled__r6JvsFXK  TextField__rootSizeMedium__LvbPjcNJ  TextField__rootVariantOutline__SsMHy1HK"
                          htmlFor="date"
                          id="date__label"
                        >
                          <div
                            className="TextField__label__-nAzBSUI "
                            id="date__labelText"
                          >
                            workLog:element.date
                          </div>
                          <div
                            className="TextField__field__8FOvcKqB"
                          >
                            <div
                              className="TextField__inputContainer__t-42E39c"
                            >
                              <input
                                className="TextField__input__vrAdszzS"
                                disabled={true}
                                id="date"
                                placeholder={null}
                                required={false}
                                size={null}
                                type="text"
                                value="01.01.2018"
                              />
                            </div>
                          </div>
                        </label>
                      </li>
                      <li
                        className="List__item__TGs53d07"
                      >
                        <label
                          className="SelectField__root__0ig1xaq8   SelectField__rootLayoutVertical__9aMTu+3a   SelectField__rootSizeMedium__6aC+Btoa  SelectField__rootVariantOutline__+F3rGbUa"
                          htmlFor="type"
                          id="type__label"
                        >
                          <div
                            className="SelectField__label__HlohMdZb "
                            id="type__labelText"
                          >
                            workLog:element.type
                          </div>
                          <div
                            className="SelectField__field__RsdA8MzV"
                          >
                            <div
                              className="SelectField__inputContainer__6OtREXBH"
                            >
                              <select
                                className="SelectField__input__TBDPc16y"
                                disabled={false}
                                id="type"
                                onChange={[Function]}
                                required={false}
                                value="WORK_LOG"
                              >
                                <option
                                  id="type__item__WORK_LOG"
                                  value="WORK_LOG"
                                >
                                  workMonth:constant.type.workLog
                                </option>
                                <option
                                  id="type__item__BUSINESS_TRIP_WORK_LOG"
                                  value="BUSINESS_TRIP_WORK_LOG"
                                >
                                  workMonth:constant.type.businessTripWorkLog
                                </option>
                                <option
                                  id="type__item__HOME_OFFICE_WORK_LOG"
                                  value="HOME_OFFICE_WORK_LOG"
                                >
                                  workMonth:constant.type.homeOfficeWorkLog
                                </option>
                                <option
                                  id="type__item__OVERTIME_WORK_LOG"
                                  value="OVERTIME_WORK_LOG"
                                >
                                  workMonth:constant.type.overtimeWorkLog
                                </option>
                                <option
                                  id="type__item__SICK_DAY_WORK_LOG"
                                  value="SICK_DAY_WORK_LOG"
                                >
                                  workMonth:constant.type.sickDayWorkLog
                                </option>
                                <option
                                  id="type__item__SPECIAL_LEAVE_WORK_LOG"
                                  value="SPECIAL_LEAVE_WORK_LOG"
                                >
                                  workMonth:constant.type.specialLeaveWorkLog
                                </option>
                                <option
                                  id="type__item__TIME_OFF_WORK_LOG"
                                  value="TIME_OFF_WORK_LOG"
                                >
                                  workMonth:constant.type.timeOffWorkLog
                                </option>
                                <option
                                  id="type__item__VACATION_WORK_LOG"
                                  value="VACATION_WORK_LOG"
                                >
                                  workMonth:constant.type.vacationWorkLog
                                </option>
                              </select>
                              <div
                                className="SelectField__caret__tQhV8bA8"
                              >
                                <span
                                  className="SelectField__caretIcon__GF1LSnV7"
                                />
                              </div>
                            </div>
                          </div>
                        </label>
                      </li>
                      <li
                        className="List__item__TGs53d07"
                      >
                        <div
                          className="mb-1"
                        >
                          workLog:element.startTime
                        </div>
                        <div>
                          <div
                            className="fieldDate"
                          >
                            <label
                              className="TextField__root__-CnhpfBr  TextField__hasRootSmallInput__1poBsv7N  TextField__rootLayoutVertical__da8tPfcc   TextField__rootSizeMedium__LvbPjcNJ  TextField__rootVariantOutline__SsMHy1HK"
                              htmlFor="startHour"
                              id="startHour__label"
                              style={
                                Object {
                                  "--rui-custom-input-size": 2,
                                }
                              }
                            >
                              <div
                                className="TextField__label__-nAzBSUI TextField__isLabelHidden__Dje5PXNs"
                                id="startHour__labelText"
                              >
                                workLog:element.startHour
                              </div>
                              <div
                                className="TextField__field__8FOvcKqB"
                              >
                                <div
                                  className="TextField__inputContainer__t-42E39c"
                                >
                                  <input
                                    autoFocus={true}
                                    className="TextField__input__vrAdszzS"
                                    disabled={false}
                                    id="startHour"
                                    max={23}
                                    min={0}
                                    onChange={[Function]}
                                    placeholder={null}
                                    required={false}
                                    size={null}
                                    type="number"
                                    value="00"
                                  />
                                </div>
                              </div>
                            </label>
                          </div>
                          <span
                            className="colon"
                          >
                            :
                          </span>
                          <div
                            className="fieldDate"
                          >
                            <label
                              className="TextField__root__-CnhpfBr  TextField__hasRootSmallInput__1poBsv7N  TextField__rootLayoutVertical__da8tPfcc   TextField__rootSizeMedium__LvbPjcNJ  TextField__rootVariantOutline__SsMHy1HK"
                              htmlFor="startMinute"
                              id="startMinute__label"
                              style={
                                Object {
                                  "--rui-custom-input-size": 2,
                                }
                              }
                            >
                              <div
                                className="TextField__label__-nAzBSUI TextField__isLabelHidden__Dje5PXNs"
                                id="startMinute__labelText"
                              >
                                workLog:element.startMinute
                              </div>
                              <div
                                className="TextField__field__8FOvcKqB"
                              >
                                <div
                                  className="TextField__inputContainer__t-42E39c"
                                >
                                  <input
                                    className="TextField__input__vrAdszzS"
                                    disabled={false}
                                    id="startMinute"
                                    max={59}
                                    min={0}
                                    onChange={[Function]}
                                    placeholder={null}
                                    required={false}
                                    size={null}
                                    type="number"
                                    value="57"
                                  />
                                </div>
                              </div>
                            </label>
                          </div>
                           h
                        </div>
                      </li>
                      <li
                        className="List__item__TGs53d07"
                      >
                        <div
                          className="mb-1"
                        >
                          workLog:element.endTime
                        </div>
                        <div>
                          <div
                            className="fieldDate"
                          >
                            <label
                              className="TextField__root__-CnhpfBr  TextField__hasRootSmallInput__1poBsv7N  TextField__rootLayoutVertical__da8tPfcc   TextField__rootSizeMedium__LvbPjcNJ  TextField__rootVariantOutline__SsMHy1HK"
                              htmlFor="endHour"
                              id="endHour__label"
                              style={
                                Object {
                                  "--rui-custom-input-size": 2,
                                }
                              }
                            >
                              <div
                                className="TextField__label__-nAzBSUI TextField__isLabelHidden__Dje5PXNs"
                                id="endHour__labelText"
                              >
                                workLog:element.endHour
                              </div>
                              <div
                                className="TextField__field__8FOvcKqB"
                              >
                                <div
                                  className="TextField__inputContainer__t-42E39c"
                                >
                                  <input
                                    className="TextField__input__vrAdszzS"
                                    disabled={false}
                                    id="endHour"
                                    max={23}
                                    min={0}
                                    onChange={[Function]}
                                    placeholder={null}
                                    required={false}
                                    size={null}
                                    type="number"
                                    value="01"
                                  />
                                </div>
                              </div>
                            </label>
                          </div>
                          <span
                            className="colon"
                          >
                            :
                          </span>
                          <div
                            className="fieldDate"
                          >
                            <label
                              className="TextField__root__-CnhpfBr  TextField__hasRootSmallInput__1poBsv7N  TextField__rootLayoutVertical__da8tPfcc   TextField__rootSizeMedium__LvbPjcNJ  TextField__rootVariantOutline__SsMHy1HK"
                              htmlFor="endMinute"
                              id="endMinute__label"
                              style={
                                Object {
                                  "--rui-custom-input-size": 2,
                                }
                              }
                            >
                              <div
                                className="TextField__label__-nAzBSUI TextField__isLabelHidden__Dje5PXNs"
                                id="endMinute__labelText"
                              >
                                workLog:element.endMinute
                              </div>
                              <div
                                className="TextField__field__8FOvcKqB"
                              >
                                <div
                                  className="TextField__inputContainer__t-42E39c"
                                >
                                  <input
                                    className="TextField__input__vrAdszzS"
                                    disabled={false}
                                    id="endMinute"
                                    max={59}
                                    min={0}
                                    onChange={[Function]}
                                    placeholder={null}
                                    required={false}
                                    size={null}
                                    type="number"
                                    value="03"
                                  />
                                </div>
                              </div>
                            </label>
                          </div>
                           h
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div
          aria-hidden={true}
          className="ScrollView__scrollingShadows__RE+u8kYV"
        />
      </div>
    </div>
    <div
      className="Modal__footer__TQz93Sa8"
    >
      <div
        className="Toolbar__toolbar__u3cllksW Toolbar__isDense__adoYxMXl  Toolbar__isAlignedToTop__jZLh20R9 Toolbar__isJustifiedToCenter__8TBu6yQS"
      >
        <div
          className="Toolbar__item__UF22W9zl"
        >
          <button
            className="Button__root__DtkOcjth Button__rootPriorityFilled__2C6g-0nB Button__rootColorPrimary__uQtzm8My Button__rootSizeMedium__0RytHphN    "
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="Button__label__kD4bhIKy"
            >
              general:action.save
            </span>
          </button>
        </div>
        <div
          className="Toolbar__item__UF22W9zl"
        >
          <button
            className="Button__root__DtkOcjth Button__rootPriorityFlat__BpE74R9w Button__rootColorPrimary__uQtzm8My Button__rootSizeMedium__0RytHphN    "
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="Button__label__kD4bhIKy"
            >
              Close
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`rendering renders correctly with mandatory props 1`] = `
<div
  className="Modal__backdrop__QS6bfkpU"
  onClick={[Function]}
  role="presentation"
>
  <div
    className="Modal__root__tJeP8o3x Modal__isRootSizeMedium__QLxPE891 Modal__isRootPositionCenter__ABff+Lfn"
    onClick={[Function]}
    role="presentation"
  >
    <div
      className="Modal__head__Q3WzGJOA"
    >
      <h3
        className="Modal__headTitle__OK9Koa3-"
      >
        workLog:modal.add.title
      </h3>
      <button
        className="Modal__close__Fe7Arlxu"
        onClick={[Function]}
        title="Close"
        type="button"
      >
        ×
      </button>
    </div>
    <div
      className="Modal__body__cWKOAQX3 Modal__isBodyScrollable__JOFadMa2"
    >
      <div
        className="ScrollView__root__MRBBylbM    ScrollView__isRootVertical__wMxlxuUu"
        style={
          Object {
            "--rui-local-arrow-color": "inherit",
            "--rui-local-end-shadow-background": "radial-gradient(farthest-side at center bottom, rgba(0, 0, 0, 0.16) 0%, rgba(0, 0, 0, 0.06) 40%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
            "--rui-local-end-shadow-box-shadow": "none",
            "--rui-local-shadow-height": "16px",
            "--rui-local-shadow-width": "auto",
            "--rui-local-start-shadow-background": "radial-gradient(farthest-side at center top, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.05) 60%, rgba(0, 0, 0, 0.02) 85%, rgba(0, 0, 0, 0) 100%)",
            "--rui-local-start-shadow-box-shadow": "none",
          }
        }
      >
        <div
          className="ScrollView__viewport__mut+G3n9"
        >
          <div
            className="ScrollView__content__SzqfnVye"
          >
            <div
              className="Modal__content__n-8neoHu"
            >
              <form>
                <div
                  className="centeredLayout"
                >
                  <div
                    className="List__root__uu6HKocx"
                  >
                    <ul
                      className="List__list__D1lQxgaF
          List__alignStart__15aFZ2jH"
                    >
                      <li
                        className="List__item__TGs53d07"
                      >
                        <label
                          className="TextField__root__-CnhpfBr    TextField__rootLayoutVertical__da8tPfcc TextField__isRootDisabled__r6JvsFXK  TextField__rootSizeMedium__LvbPjcNJ  TextField__rootVariantOutline__SsMHy1HK"
                          htmlFor="date"
                          id="date__label"
                        >
                          <div
                            className="TextField__label__-nAzBSUI "
                            id="date__labelText"
                          >
                            workLog:element.date
                          </div>
                          <div
                            className="TextField__field__8FOvcKqB"
                          >
                            <div
                              className="TextField__inputContainer__t-42E39c"
                            >
                              <input
                                className="TextField__input__vrAdszzS"
                                disabled={true}
                                id="date"
                                placeholder={null}
                                required={false}
                                size={null}
                                type="text"
                                value="01.01.2018"
                              />
                            </div>
                          </div>
                        </label>
                      </li>
                      <li
                        className="List__item__TGs53d07"
                      >
                        <label
                          className="SelectField__root__0ig1xaq8   SelectField__rootLayoutVertical__9aMTu+3a   SelectField__rootSizeMedium__6aC+Btoa  SelectField__rootVariantOutline__+F3rGbUa"
                          htmlFor="type"
                          id="type__label"
                        >
                          <div
                            className="SelectField__label__HlohMdZb "
                            id="type__labelText"
                          >
                            workLog:element.type
                          </div>
                          <div
                            className="SelectField__field__RsdA8MzV"
                          >
                            <div
                              className="SelectField__inputContainer__6OtREXBH"
                            >
                              <select
                                className="SelectField__input__TBDPc16y"
                                disabled={false}
                                id="type"
                                onChange={[Function]}
                                required={false}
                                value="WORK_LOG"
                              >
                                <option
                                  id="type__item__WORK_LOG"
                                  value="WORK_LOG"
                                >
                                  workMonth:constant.type.workLog
                                </option>
                                <option
                                  id="type__item__BUSINESS_TRIP_WORK_LOG"
                                  value="BUSINESS_TRIP_WORK_LOG"
                                >
                                  workMonth:constant.type.businessTripWorkLog
                                </option>
                                <option
                                  id="type__item__HOME_OFFICE_WORK_LOG"
                                  value="HOME_OFFICE_WORK_LOG"
                                >
                                  workMonth:constant.type.homeOfficeWorkLog
                                </option>
                                <option
                                  id="type__item__OVERTIME_WORK_LOG"
                                  value="OVERTIME_WORK_LOG"
                                >
                                  workMonth:constant.type.overtimeWorkLog
                                </option>
                                <option
                                  id="type__item__SICK_DAY_WORK_LOG"
                                  value="SICK_DAY_WORK_LOG"
                                >
                                  workMonth:constant.type.sickDayWorkLog
                                </option>
                                <option
                                  id="type__item__SPECIAL_LEAVE_WORK_LOG"
                                  value="SPECIAL_LEAVE_WORK_LOG"
                                >
                                  workMonth:constant.type.specialLeaveWorkLog
                                </option>
                                <option
                                  id="type__item__TIME_OFF_WORK_LOG"
                                  value="TIME_OFF_WORK_LOG"
                                >
                                  workMonth:constant.type.timeOffWorkLog
                                </option>
                                <option
                                  id="type__item__VACATION_WORK_LOG"
                                  value="VACATION_WORK_LOG"
                                >
                                  workMonth:constant.type.vacationWorkLog
                                </option>
                              </select>
                              <div
                                className="SelectField__caret__tQhV8bA8"
                              >
                                <span
                                  className="SelectField__caretIcon__GF1LSnV7"
                                />
                              </div>
                            </div>
                          </div>
                        </label>
                      </li>
                      <li
                        className="List__item__TGs53d07"
                      >
                        <div
                          className="mb-1"
                        >
                          workLog:element.startTime
                        </div>
                        <div>
                          <div
                            className="fieldDate"
                          >
                            <label
                              className="TextField__root__-CnhpfBr  TextField__hasRootSmallInput__1poBsv7N  TextField__rootLayoutVertical__da8tPfcc   TextField__rootSizeMedium__LvbPjcNJ  TextField__rootVariantOutline__SsMHy1HK"
                              htmlFor="startHour"
                              id="startHour__label"
                              style={
                                Object {
                                  "--rui-custom-input-size": 2,
                                }
                              }
                            >
                              <div
                                className="TextField__label__-nAzBSUI TextField__isLabelHidden__Dje5PXNs"
                                id="startHour__labelText"
                              >
                                workLog:element.startHour
                              </div>
                              <div
                                className="TextField__field__8FOvcKqB"
                              >
                                <div
                                  className="TextField__inputContainer__t-42E39c"
                                >
                                  <input
                                    autoFocus={true}
                                    className="TextField__input__vrAdszzS"
                                    disabled={false}
                                    id="startHour"
                                    max={23}
                                    min={0}
                                    onChange={[Function]}
                                    placeholder={null}
                                    required={false}
                                    size={null}
                                    type="number"
                                    value="00"
                                  />
                                </div>
                              </div>
                            </label>
                          </div>
                          <span
                            className="colon"
                          >
                            :
                          </span>
                          <div
                            className="fieldDate"
                          >
                            <label
                              className="TextField__root__-CnhpfBr  TextField__hasRootSmallInput__1poBsv7N  TextField__rootLayoutVertical__da8tPfcc   TextField__rootSizeMedium__LvbPjcNJ  TextField__rootVariantOutline__SsMHy1HK"
                              htmlFor="startMinute"
                              id="startMinute__label"
                              style={
                                Object {
                                  "--rui-custom-input-size": 2,
                                }
                              }
                            >
                              <div
                                className="TextField__label__-nAzBSUI TextField__isLabelHidden__Dje5PXNs"
                                id="startMinute__labelText"
                              >
                                workLog:element.startMinute
                              </div>
                              <div
                                className="TextField__field__8FOvcKqB"
                              >
                                <div
                                  className="TextField__inputContainer__t-42E39c"
                                >
                                  <input
                                    className="TextField__input__vrAdszzS"
                                    disabled={false}
                                    id="startMinute"
                                    max={59}
                                    min={0}
                                    onChange={[Function]}
                                    placeholder={null}
                                    required={false}
                                    size={null}
                                    type="number"
                                    value="57"
                                  />
                                </div>
                              </div>
                            </label>
                          </div>
                           h
                        </div>
                      </li>
                      <li
                        className="List__item__TGs53d07"
                      >
                        <div
                          className="mb-1"
                        >
                          workLog:element.endTime
                        </div>
                        <div>
                          <div
                            className="fieldDate"
                          >
                            <label
                              className="TextField__root__-CnhpfBr  TextField__hasRootSmallInput__1poBsv7N  TextField__rootLayoutVertical__da8tPfcc   TextField__rootSizeMedium__LvbPjcNJ  TextField__rootVariantOutline__SsMHy1HK"
                              htmlFor="endHour"
                              id="endHour__label"
                              style={
                                Object {
                                  "--rui-custom-input-size": 2,
                                }
                              }
                            >
                              <div
                                className="TextField__label__-nAzBSUI TextField__isLabelHidden__Dje5PXNs"
                                id="endHour__labelText"
                              >
                                workLog:element.endHour
                              </div>
                              <div
                                className="TextField__field__8FOvcKqB"
                              >
                                <div
                                  className="TextField__inputContainer__t-42E39c"
                                >
                                  <input
                                    className="TextField__input__vrAdszzS"
                                    disabled={false}
                                    id="endHour"
                                    max={23}
                                    min={0}
                                    onChange={[Function]}
                                    placeholder={null}
                                    required={false}
                                    size={null}
                                    type="number"
                                    value="01"
                                  />
                                </div>
                              </div>
                            </label>
                          </div>
                          <span
                            className="colon"
                          >
                            :
                          </span>
                          <div
                            className="fieldDate"
                          >
                            <label
                              className="TextField__root__-CnhpfBr  TextField__hasRootSmallInput__1poBsv7N  TextField__rootLayoutVertical__da8tPfcc   TextField__rootSizeMedium__LvbPjcNJ  TextField__rootVariantOutline__SsMHy1HK"
                              htmlFor="endMinute"
                              id="endMinute__label"
                              style={
                                Object {
                                  "--rui-custom-input-size": 2,
                                }
                              }
                            >
                              <div
                                className="TextField__label__-nAzBSUI TextField__isLabelHidden__Dje5PXNs"
                                id="endMinute__labelText"
                              >
                                workLog:element.endMinute
                              </div>
                              <div
                                className="TextField__field__8FOvcKqB"
                              >
                                <div
                                  className="TextField__inputContainer__t-42E39c"
                                >
                                  <input
                                    className="TextField__input__vrAdszzS"
                                    disabled={false}
                                    id="endMinute"
                                    max={59}
                                    min={0}
                                    onChange={[Function]}
                                    placeholder={null}
                                    required={false}
                                    size={null}
                                    type="number"
                                    value="03"
                                  />
                                </div>
                              </div>
                            </label>
                          </div>
                           h
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
        <div
          aria-hidden={true}
          className="ScrollView__scrollingShadows__RE+u8kYV"
        />
      </div>
    </div>
    <div
      className="Modal__footer__TQz93Sa8"
    >
      <div
        className="Toolbar__toolbar__u3cllksW Toolbar__isDense__adoYxMXl  Toolbar__isAlignedToTop__jZLh20R9 Toolbar__isJustifiedToCenter__8TBu6yQS"
      >
        <div
          className="Toolbar__item__UF22W9zl"
        >
          <button
            className="Button__root__DtkOcjth Button__rootPriorityFilled__2C6g-0nB Button__rootColorPrimary__uQtzm8My Button__rootSizeMedium__0RytHphN    "
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="Button__label__kD4bhIKy"
            >
              general:action.save
            </span>
          </button>
        </div>
        <div
          className="Toolbar__item__UF22W9zl"
        >
          <button
            className="Button__root__DtkOcjth Button__rootPriorityFlat__BpE74R9w Button__rootColorPrimary__uQtzm8My Button__rootSizeMedium__0RytHphN    "
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="Button__label__kD4bhIKy"
            >
              Close
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
